--- a/node-server/public/stylesheets/incom.less
+++ b/node-server/public/stylesheets/incom.less
@@ -1,9 +1,32 @@
 body {
-  padding: 50px;
+  padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   background-color: transparent;
 }
 
-a {
-  color: #00B7FF;
+h2 {
+  font-size: 16px;
+  text-decoration: none;
+  color: #F09002;
+}
+
+.post-wrapper {
+  float: left;
+  padding: 12px;
+  background-color: #5D6873;
+  width: 242px;
+  margin-bottom: 1px;
+}
+
+.post {
+  float: left;
+  background-color: white;
+  padding: 6px 12px 12px 12px;
+  width: 218px;
+}
+
+.meta-datetime {
+  font-size: 12px;
+  color: #99A5AC;
+  line-height: 16px;
 }
