--- a/node-server/views/asta.ejs
+++ b/node-server/views/asta.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= text %></title>
     <link rel='stylesheet' href='/stylesheets/asta.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
+    <h1><%= text %></h1>
     <p><%= datetime %></p>
   </body>
 </html>
