--- a/node-server/views/incom.ejs
+++ b/node-server/views/incom.ejs
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= text %></title>
     <link rel='stylesheet' href='/stylesheets/incom.css' />
   </head>
   <body>
   	<div class="post-wrapper">
 			<div class="post">
-				<h2><%= title %></h2>
+				<h2><%= text %></h2>
 				<div class="meta">
 				  <span class="meta-datetime"><%= datetime %></span>
 				</div>
