--- a/node-server/views/names.ejs
+++ b/node-server/views/names.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= type %></title>
     <link rel='stylesheet' href='/stylesheets/names.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1><%= type %></h1>
+    <p>Welcome to <%= text %></p>
   </body>
 </html>
