--- a/node-server/views/zitate.ejs
+++ b/node-server/views/zitate.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
+    <title><%= text %></title>
     <link rel='stylesheet' href='/stylesheets/zitate.css' />
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1><%= text %></h1>
+    <p><%= type %></p>
   </body>
 </html>
