--- a/node-server/public/stylesheets/twitter.less
+++ b/node-server/public/stylesheets/twitter.less
@@ -1,9 +1,52 @@
 body {
   padding: 0px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font: 14px "Helvetica Neue",Arial,sans-serif;
   background-color: transparent;
 }
 
 a {
   color: #00B7FF;
+}
+img {
+	float:left;
+}
+.subox1 {
+	float:left;
+	padding-left:10px;
+	font-family: 'Helvetica Neue', Arial, sans-serif;
+}
+.autor {
+	font-weight:bold;
+	font-size:16px;
+	margin-top: 0;
+	margin-bottom:4px;
+}
+.username {
+	font-size:13px;
+	margin-top: 0;
+	color: rgb(102, 102, 102);
+}
+.text {
+	clear:both;
+	font-size: 17px;
+	font-weight: normal;
+	font-family: Georgia, 'Times New Roman', Palatino, serif;
+	margin-bottom:0;
+}
+.time {
+	font-size:13px;
+	margin: 0;
+	color: rgb(102, 102, 102);
+	display:none;
+}
+.box {
+	background: #FFF;
+	width: 300px;
+	border-bottom-left-radius: 5px;
+	border-bottom-right-radius: 5px;
+	border-top-left-radius: 5px;
+	border-top-right-radius: 5px;
+	border-color: #EEE;
+	border: #EEE 1px solid;
+	padding: 20px;
 }
