--- a/node-server/views/twitter.ejs
+++ b/node-server/views/twitter.ejs
@@ -5,8 +5,14 @@
     <link rel='stylesheet' href='/stylesheets/twitter.css' />
   </head>
   <body>
-    <h1><%= text %></h1>
-    <p><%= author %></p>
-    <p><%= time %></p>
+  	<div class="box">
+  		<img src="https://si0.twimg.com/profile_images/2284174758/v65oai7fxn47qv9nectx_normal.png">
+  		<div class="subox1">
+  			<p class="autor"><%= author %></p>
+  			<p class="username">@username</p>
+  		</div>
+		<p class="text"><%= text %></p>
+		<p class="time"><%= time %></p>
+	</div>
   </body>
 </html>
