update names.js and view

--- a/node-server/views/names.ejs
+++ b/node-server/views/names.ejs
@@ -5,7 +5,7 @@
     <link rel='stylesheet' href='/stylesheets/names.css' />
   </head>
   <body>
-    <h1><%= type %></h1>
-    <p>Welcome to <%= text %></p>
+    <h1><%= text %></h1>
+    <p><%= type %></p>
   </body>
 </html>
