names add type to h1 class

--- a/node-server/public/stylesheets/names.less
+++ b/node-server/public/stylesheets/names.less
@@ -4,6 +4,14 @@ body {
   background-color: transparent;
 }
 
-a {
-  color: #00B7FF;
+.hip-hop {
+  color: #f00;	
+}
+
+.star-wars {
+	color: #ff0;
+}
+
+.wow {
+	color: #f0f;
 }
