--- a/node-server/views/names.ejs
+++ b/node-server/views/names.ejs
@@ -5,7 +5,8 @@
     <link rel='stylesheet' href='/stylesheets/names.css' />
   </head>
   <body>
-    <h1><%= text %></h1>
-    <p><%= type %></p>
+  	<div class="container">
+  		<h1 class="<%= type %>"><%= text %></h1>
+  	</div>
   </body>
 </html>
