--- a/node-server/views/zitate.ejs
+++ b/node-server/views/zitate.ejs
@@ -5,7 +5,12 @@
     <link rel='stylesheet' href='/stylesheets/zitate.css' />
   </head>
   <body>
-    <h1><%= text %></h1>
-    <p><%= type %></p>
+  	<span class="box">
+		<span class="text"><%= text %></span>
+		<span class="pfeilOuter">
+			<span class="pfeilInner">
+			</span>
+		</span>
+	</span>
   </body>
 </html>
