--- a/node-server/public/stylesheets/twitter.less
+++ b/node-server/public/stylesheets/twitter.less
@@ -32,6 +32,7 @@ img {
 	font-weight: normal;
 	font-family: Georgia, 'Times New Roman', Palatino, serif;
 	margin-bottom:0;
+	padding-top: 7px;
 }
 .time {
 	font-size:13px;
@@ -48,5 +49,26 @@ img {
 	border-top-right-radius: 5px;
 	border-color: #EEE;
 	border: #EEE 1px solid;
-	padding: 20px;
+	padding: 14px;
+}
+.pfeilOuter {
+	margin-left: auto;
+	margin-right: auto;
+	width: 0px;
+	height: 0px;
+	width: 100%;
+	bottom: 0px;
+	position: relative;
+	display: block;
+	
+}
+.pfeilInner {
+	width: 30px;
+	height: 30px;
+	-webkit-transform: rotate(45deg);
+	position: relative;
+	background: #FFF;
+	display: inherit;
+	margin-left: auto ;
+  	margin-right: auto ;
 }
