--- a/node-server/views/twitter.ejs
+++ b/node-server/views/twitter.ejs
@@ -6,13 +6,17 @@
   </head>
   <body>
   	<div class="box">
-  		<img src="https://si0.twimg.com/profile_images/2284174758/v65oai7fxn47qv9nectx_normal.png">
+  		<img src="<%= image %>">
   		<div class="subox1">
   			<p class="autor"><%= author %></p>
-  			<p class="username">@username</p>
+  			<p class="username">@<%= username %></p>
   		</div>
 		<p class="text"><%= text %></p>
 		<p class="time"><%= time %></p>
+    <span class="pfeilOuter">
+      <span class="pfeilInner">
+      </span>
+    </span>
 	</div>
   </body>
 </html>
