buble manager and fonts

--- a/node-server/views/incom.ejs
+++ b/node-server/views/incom.ejs
@@ -11,7 +11,12 @@
 				<div class="meta">
 				  <span class="meta-datetime"><%= datetime %></span>
 				</div>
+				<span class="pfeilOuter">
+				  <span class="pfeilInner">
+				  </span>
+				</span>
 			</div>
+
 		</div>
   </body>
 </html>
