--- a/node-server/public/stylesheets/incom.less
+++ b/node-server/public/stylesheets/incom.less
@@ -30,3 +30,24 @@ h2 {
   color: #99A5AC;
   line-height: 16px;
 }
+.pfeilOuter {
+margin-left: auto;
+margin-right: auto;
+width: 0px;
+height: 0px;
+width: 100%;
+bottom: 13px;
+position: relative;
+display: block;
+  
+}
+.pfeilInner {
+  width: 50px;
+  height: 50px;
+  -webkit-transform: rotate(45deg);
+  position: relative;
+  background: #FFF;
+  display: inherit;
+  margin-left: auto ;
+    margin-right: auto ;
+}
