--- a/node-server/public/stylesheets/names.less
+++ b/node-server/public/stylesheets/names.less
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: "hiphop";
+    src: url(fonts/Mostwasted.ttf) format('truetype');
+}
+@font-face {
+    font-family: "starwars";
+    src: url(fonts/Starjedi.ttf) format('truetype');
+}
 body {
   padding: 0px;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
@@ -5,13 +13,48 @@ body {
 }
 
 .hip-hop {
-  color: #f00;	
+	font-family: 'hiphop',Arial;
+	font-size: 50px;
+	/*text-shadow: 1px 1px 1px rgba(26, 2, 26, 0.19);*/
+	/*
+	background: -webkit-linear-gradient(#0134d3, #FF94BF);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	*/
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: rgba(160, 46, 250, 0.38);
+	color: rgb(160, 46, 250);
 }
 
 .star-wars {
-	color: #ff0;
+	font-family: 'starwars',Arial;
+	font-size: 36px;
+	color:#FFD608;
+	/*
+	background: -webkit-linear-gradient(#FFEC10, #FFD608);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	*/
+	-webkit-text-stroke-width: 1px;
+	-webkit-text-stroke-color: rgba(160, 46, 250, 0.1);
 }
 
 .wow {
-	color: #f0f;
+	/*color: #f0f;*/
+	color: #0AFF00;
+	text-shadow: 0px 0px 3px rgba(29, 255, 84, 1);
+
+}
+.container {
+	display:inline-block;
+}
+.indicator {
+	margin-left: auto;
+	margin-right: auto;
+	width: 2px;
+	height: 2px;
+	bottom: 0px;
+	position: relative;
+	display: block;
+	background:rgba(255,255,255,0.1);
 }
