--- a/node-server/views/names.ejs
+++ b/node-server/views/names.ejs
@@ -7,6 +7,7 @@
   <body>
   	<div class="container">
   		<h1 class="<%= type %>"><%= text %></h1>
+  		<span class="indicator"></div>
   	</div>
   </body>
 </html>
